--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
  </head>
  <body>
     <a href="./public/movie ranking project.html"><h2>Movie Ranking Project</h2></a>
-    <img src="./assets/images/movies.png/" height="200"/>
+    <img src="./assets/images/movies.png/"/>
 
     <a href="./public/bday invite.html"><h2>Birthday Invite Project</h2></a>
-    <img src="./assets/images/birthday.png/" height="200"/>
+    <img src="./assets/images/birthday.png/"/>
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
