--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
  </head>
  <body>
     <a href="./public/movie ranking project.html"><h2>Movie Ranking Project</h2></a>
-    <img src="https://github.com/thuymmai/thuy-html-portfolio/blob/main/assets/images/movies.png" height="200"/>
+    <img src="./assets/images/Movies screenshot 2024-07-07 155522.jpg" height="200"/>
 
     <a href="./public/bday invite.html"><h2>Birthday Invite Project</h2></a>
-    <img src="https://github.com/thuymmai/thuy-html-portfolio/blob/main/assets/images/birthday.png" height="200"/>
+    <img src="./assets/images/Bday screenshot 2024-07-07 155422.jpg" height="200"/>
 
     <hr />
     <a href="./public/about.html">About Me</a>
